--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
+    "eslint": "^3.18.0",
+    "eslint-config-standard": "^7.1.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.1.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
